--- a/fahim.html
+++ b/fahim.html
@@ -13,5 +13,9 @@
     <p> I Proud My City, In The Hsbigonj</p>
     <p> I Want to Be an Enginer</p>
     <p> I Want to a supper Moduel Programargit init</p>
+    <p> I am Diamond sellar</p>
+    <input type="text">
+    <br>
+    <button> Hay Baby, Omma!</button>
 </body>
 </html>
